<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WING</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string-array name="app_drawer_array">
        <item>Tabletop</item>
        <item>Tokens</item>
        <item>Game Config</item>
        <item>Send Image</item>
        <item>Pass Message</item>
        <item>Receive Message</item>
        <item>Roll Die</item>
        <item>Connection</item>
    </string-array>

    <string name="drawer_close">close drawer</string>
    <string name="drawer_open">open drawer</string>
    
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>

    <!-- Connection Fragment -->
    <string name="connect">Connect</string>
    <string name="label_port">Port</string>
    <string name="label_ip">ip</string>
    <string name="default_port">50002</string>
    <string name="label_errors">Errors:</string>
    <string name="label_recieved">Message Received:</string>
    <string name="tabel_send">Message to Send:</string>
    <string name="send_button">Send Message</string>
    <string name="label_disconnect">Disconnect</string>

    <!-- Send Image Fragment -->
    <string name="pick_image">Select Image</string>
    <string name="send_token">Send Token</string>
    <string name="send_map">Send Map</string>
    
    <!-- Token Activity -->
    <string name="title_activity_token">Token Settings</string>
    <string name="view_tabletop">View on Tabletop</string>
    <string name="medium_text">Medium Text</string>
    <string name="name">Name</string>

    <!-- Pass Message Fragment -->
    <string name="choose_rcvr">Choose Recipient</string>
    <string name="out_msg">Outgoing Messages</string>
    <string name="in_msg">Incoming Messages</string>
    <string name="sender_id">Sender\'s ID:</string>
    <string name="id">Id</string>
    <string name="xy">X, Y</string>

    <!-- Game Config Fragment -->
    <string name="button_update_alias">Update Alias</string>
    <string name="in_alias">Input a new Alias</string>
    <string name="dm_title">Dungeon Master:</string>
    <string name="dm_name"></string>
    <string name="button_getDM">Become the DM</string>
    <string name="button_releaseDM">Release DM Privileges</string>
    
    <!-- Roll Die Fragment -->
    <string name="button_roll">Roll!</string>
    
    <!-- Bulletins -->
    <string name="from">From </string>
    <string name="nameColon">Name: </string>
    
    <!-- Notifications -->
    <string name="in_msg_notification">NEW_IN_MESSAGE</string>
    
    <!-- Misc -->
    <string name="desc">desc</string>
</resources>
