<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/updateAliasTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/in_alias"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <EditText
        android:id="@+id/aliasString"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <Button
        android:id="@+id/btnUpdateAlias"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_update_alias" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/dmTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dm_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/dmName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dm_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>
    
	<Button
	    android:id="@+id/btnGetDM"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/button_getDM" />

	<Button
	    android:id="@+id/btnReleaseDM"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/button_releaseDM" />
    
</LinearLayout>
