<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <Button 
        android:text="@string/pick_image" 
        android:id="@+id/btnSelectImage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <Button 
        android:text="@string/send_token" 
        android:id="@+id/btnSendToken"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <Button 
        android:text="@string/send_map" 
        android:id="@+id/btnSendMap" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical" >
	    
	    <ImageView
	        android:id="@+id/imgView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:scaleType="centerInside"
	        android:contentDescription="@string/desc" />
   
    </LinearLayout>
        
</LinearLayout>