<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- The main content view -->
    <!-- The navigation drawer -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/tokenImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/earth" />

        <EditText
            android:id="@+id/tokenName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ems="10" >
            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btnEditName"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_edit" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel" />

    <Button
        android:id="@+id/btnViewTableTop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_tabletop" />

</LinearLayout>